--- a/views/index.jade
+++ b/views/index.jade
@@ -24,5 +24,11 @@ div.actions
     div.score Score: #{score}
     form(method='post', action='/restart')
       input(type='submit', value='Restart')
+    div.info
+      a(href='http://data.gov.uk/dataset/central-government-websites-2010-11') Data source
+      &nbsp;&bull;&nbsp;
+      a(href='https://github.com/JordanHatch/play-your-cards-right') Code
+      &nbsp;&bull; Built by&nbsp;
+      a(href='http://jordanh.net/') Jordan
 script(type='text/javascript')
   window.scroll(0,100000000000);
